@@ -1,3 +1,11 @@
+2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Break
+	  on newlines. Better error reporting.
+
+	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Better error
+	  reporting.
+
 2009-04-27  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.XmlEditor/DeclarationViewWindow.cs: Updated
